# docling-workshop

./: .gitignore  .markdownlint-cli2.yaml  .poutine.yml  .pre-commit-config.yaml  .spellcheck-en-custom.txt  .spellcheck.yml  README.md  mkdocs.yml  pyproject.toml
.github/: dependabot.yml
.github/notebook_lists/: vanilla_notebooks.txt
.github/workflows/: actionlint.yaml  lint.yaml  lint.yml  notebooks.yaml  publish.yml  spellcheck.yaml
docs/: README.md
docs/lab-1/: README.md
docs/lab-2/: README.md
docs/lab-3/: README.md
docs/lab-4/: README.md
docs/lab-5/: README.md
docs/lab-6/: README.md
docs/lab-7/: README.md
docs/pre-work/: README.md
docs/troubleshooting/: README.md
notebooks/: Chunking.ipynb  Chunkless RAG.ipynb  Conversion.ipynb  Conversion_Colab.ipynb  Docling_Lab1.ipynb  Docling_Lab1_code (1).ipynb  Docling_Lab2_code (1).ipynb  LM Studio RAG.ipynb  MCP_Agents.ipynb  Ollama RAG.ipynb  RAG.ipynb  Serving.ipynb  Token_Cost_Comparison.ipynb
scripts/regenerate_fixtures/: README.md  reenrich_ibm_concise.py
src/docling_workshop.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
