[project]
name = "docling-workshop"
version = "1.0.0"
description = "Docling Workshop - Learn document processing with AI"
requires-python = ">=3.10"
readme = "README.md"
license = {text = "Apache-2.0"}
authors = [
    {name = "Ming Zhao"}
]
keywords = ["docling", "document-processing", "ai", "rag", "workshop"]

[project.urls]
Homepage = "https://ibm-granite-community.github.io/docling-workshop"
Repository = "https://github.com/ibm-granite-community/docling-workshop"

[project.optional-dependencies]
lab1 = [
    "docling[vlm]",
    "matplotlib",
    "pillow",
    "pandas",
    "ipywidgets",
    "python-dotenv",
]
lab2 = [
    "docling",
    "transformers",
    "matplotlib",
    "pillow",
]
lab3 = [
    "docling",
    "transformers",
    "pillow",
    "langchain>=0.3",
    "langchain-core>=0.3",
    "langchain-community",
    "langchain-huggingface",
    "sentence-transformers",
    "langchain-chroma",
    "chromadb",
    "langchain-openai",
    "matplotlib",
]
lab4 = [
    "docling-serve",
    "httpx",
]
lab5 = [
    "docling",
    "anthropic>=0.40.0",
    "PyPDF2>=3.0.0",
    "httpx",
]
lab6 = [
    "docling-mcp",
    "mcp",
    "httpx",
]
all = [
    "docling-workshop[lab1,lab2,lab3,lab4,lab5,lab6]",
]
dev = [
    "jupyter",
    "notebook",
    "ipywidgets",
    "pre-commit",
]
